Fix: Add prisma generate to build script for Vercel

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
+    "postinstall": "prisma generate",
     "start": "next start",
     "lint": "next lint",
     "test": "vitest --run",
@@ -15,6 +16,7 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@libsql/client": "^0.15.15",
     "@prisma/adapter-libsql": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "dotenv": "^17.2.3",
     "next": "14.2.33",
     "next-auth": "^4.24.13",
@@ -22,7 +24,6 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@prisma/client": "^7.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
